src/styles.css
/* You can add global styles to this file, and also import other style files */
:root {
  --color-primary: #007bff;
  --color-body: #333;
  --color-footer: #333;
  --bg-gray: #f4f4f4;
}

body,
html {
  font-family: 'Helvetica Neue', sans-serif;
  background-color: var(--bg-gray);
  color: var(--color-body);
  margin: 0;
  padding: 0;
  max-width: 100vw;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: var(--color-primary);
  transition: color 0.2s;
}

a:hover {
  color: #0056b3;
}

fieldset {
  border: none;
  padding: 0;
}

.base-container {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.content {
  flex-grow: 1;
  display: inline;
}

button {
  padding: 10px 20px;
  background-color: #4caf50;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  transition:
    background-color 0.3s,
    box-shadow 0.3s;

  &:hover {
    background-color: #45a049;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
  }
}

button.secondary {
  background-color: #e3e3e3;
  color: #171717;

  &:hover {
    background-color: #d8d8d8;
  }
}

button:disabled {
  background-color: #ccc;
  color: #fff;
  cursor: not-allowed;
  box-shadow: none;
}

/* Style form labels */
.form-group label {
  display: block;
  font-weight: bold;
  margin-bottom: 5px;
  margin-top: 20px;
}

/* Style form inputs */
.form-control {
  padding: 10px;
  margin-bottom: 3px;
  border: 1px solid #ccc;
  border-radius: 5px;
}

input.form-control {
  width: -webkit-fill-available;
}

.error-message {
  color: #ff0000;
  font-size: 12px;
  margin-top: 5px;
  margin-bottom: 20px;
}

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src:
    local('Material Icons'),
    local('MaterialIcons-Regular'),
    url(assets/mat.woff2) format('woff2'),
    url(assets/mat.ttf) format('truetype');
}

.material-symbols-outlined {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
}

/* Reset default styles */
select {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  background: transparent;
  border: none;
  outline: none;
  padding: 10px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 3px;
  cursor: pointer;
  background-color: #fff;
  /* Background color for the select box */
  color: #333;
  /* Text color */
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' fill='%23333'><polygon points='5,5 15,5 10,12'/></svg>")
    no-repeat right center;
  background-size: 20px 20px;
  /* Adjust the size of the icon */
}

/* Custom dropdown arrow */
select::after {
  content: '\25BC';
  /* Downward arrow character */
  position: absolute;
  top: 50%;
  right: 10px;
  transform: translateY(-50%);
  color: #555;
  /* Arrow color */
}

/* Hover effect */
select:hover {
  border-color: #999;
  /* Border color on hover */
}

/* Focus effect */
select:focus {
  border-color: #007bff;
  /* Border color on focus */
}

/* Disabled style */
select:disabled {
  background-color: #f4f4f4;
  /* Disabled background color */
  color: #999;
  /* Disabled text color */
  cursor: not-allowed;
}

/* Optional: Style for option elements */
select option {
  background-color: #fff;
  /* Background color for options */
  color: #333;
  /* Text color for options */
}

/* Optional: Hover effect for option elements */
select option:hover {
  background-color: #007bff;
  /* Background color on hover */
  color: #fff;
  /* Text color on hover */
}

